Fixes glyphicons alignment in buttons
<==== Mercurial data ====>
Branch: cloud_17.1.2_bootstrap4

--- a/cloud_portal/front_end/app/styles/_theme_override.scss
+++ b/cloud_portal/front_end/app/styles/_theme_override.scss
@@ -178,6 +178,8 @@ select.form-control{
   border-radius: 2px;
   padding: 5px 16px;
   font-size: 14px;
+  display: flex;
+  align-items: center;
 
   &:hover,
   &:active,
@@ -185,6 +187,10 @@ select.form-control{
   &:focus,
   &.focus {
     outline: none !important;
+  }
+
+  &.dropdown-toggle{
+    display: block;
   }
 }
 
